--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@layer components{
+    .input{
+        @apply py-1 px-5 bg-gray-100 rounded border border-gray-300 focus:border-blue-500 focus:bg-white focus:ring-2 focus:ring-blue-200 outline-none text-base text-gray-600 leading-7 transition-colors duration-200 ease-in-out;
+    }
+
+    .btn-primary{
+        @apply text-white leading-7 bg-blue-400 hover:bg-blue-500 px-10 py-2 rounded-2xl
+    }
+}
